--- a/config
+++ b/config
@@ -15,7 +15,7 @@ server_ip         127.0.0.1
 listen_port       80
 heap_mb           32
 server_name       www.firstsiteonthisserver.com
-cgi               off
-pycgi             .
+cgi               on
+cgipath           .
 security          on
 sendfilelist      off
